Update style guide to match website look

--- a/public/callout.html
+++ b/public/callout.html
@@ -1,21 +1,234 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- saved from url=(0106)https://www.citizensadvice.org.uk/benefits/universal-credit/before-you-apply/universal-credit-eligibility/ -->
 
-  <!-- Basic Page Needs
+<html class="js hide-cookie-monster" lang="en-GB">
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+
+    <title>Citizens Advice style guide</title>
+
+  <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Citizens Advice style guide</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
+    <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
+    <meta content="EWS" name="cab-extent">
+    <meta content="/static/images/apple-touch-icon.png">
+    <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
+
+  <!-- Stylesheet
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/main.css" media="screen" rel="stylesheet">
+    <link href="css/site.css" media="screen" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
+    <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Javascript
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
+    <script src="../libs/javascript/beta-dap-accordion.js"></script>
+    <script src="../libs/javascript/sticky-nav.js"></script><!-- Sticky Navigation JS -->
+    <script src="../libs/javascript/nav-active.js"></script><!-- Navigation Updating JS -->
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
+    <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
+</head>
+
+<body>
+
+    <div class="skip-nav">
+        <a class="screenreader screenreader--focusable" href="">Skip to content</a> <a class="screenreader screenreader--focusable" href="">Skip to footer</a>
+    </div>
+
+    <div class="cookie-monster hide-no-cookies hide-no-js no-print">
+        <div class="cookie-monster__content">
+            <div>
+                <p>This site uses cookies.&nbsp; Find out more about <a href="#">our use of cookies</a>.</p>
+            </div><button class="button--blue cookie-monster__close" data-action="close" type="button"><i class="icon-cross"></i> Close</button>
+        </div>
+    </div>
+
+    <header class="main-header">
+        <div class="main-header__content main-content">
+            <a class="main-header__logo" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a>
+
+            <!--div class="main-header__links" data-track-zone="top-bar">
+                <a class="main-header__menu-link js-toggle-menu" href=""><i class="icon-menu"></i>Menu</a>
+
+                <nav class="main-header__top-nav">
+                    <a href="#">Cymraeg</a> <a class="hide-offline main-header__login" href=""><i class="icon-key"></i>Sign-in</a>
+                </nav>
+
+                <form action="" class="main-header__search hide-offline">
+                    <label class="screenreader" for="main-header__search__input">Search</label> <input class="main-header__search__input" id="main-header__search__input" name="q" placeholder="" type="search"> <button class="main-header__search__submit" title="Search" type="submit"><i class="icon-search icon--no-text"></i> <span class="screenreader">Search</span></button>
+                </form>
+            </div -->
+
+        </div>
+    </header><!-- MEGA MENU -->
+
+    <div class="main-container">
+        <nav class="main-breadcrumb">
+            <div class="main-breadcrumb__content">
+                <span class="breadcrumb__item"><a href="#">Home</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a href="index.html">Digital guide</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Callouts</a></span>
+            </div>
+        </nav>
+
+        <aside class="section-notice">
+            <h2 class="screenreader">Notice</h2>
+
+            <div class="section-notice__content">
+                <p><span class="badge">NEW</span>&nbsp;This page is part of <a href="#">our new approach to digital advice</a>.</p>
+            </div>
+        </aside>
+
+        <div class="main-content">
+            <!--main class="main-content__right" id="main" role="main">
+                <!-- MAIN CONTENT -->
+
+            <div class="title">
+                <h1 class="title__heading js-ref"><span class="title__title">Citizens Advice elements guide</span></h1>
+            </div>
+
+            <div class="articleContent">
+
+              <p class="p-lede">Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.</p>
+                
+                  <div class="col-sm-8">
+                    <p>It is important to ask:
+                      <ul>
+                        <li>is the callout neccessary, too many, misused or unneccessary callouts weaken their value</li>
+                        <li>which style of callout is relevant, is the information 'useful', 'important' or 'recommending'</li>
+                      </ul>
+                    </p>
+                    <p>Colours can't be relied upon as the only method of communicating the importance and content of a callout. Any callouts should be clearly titled using <code>h2</code>or<code>h3</code> tags. Use the appropriate Aria tags for the relevant callouts to ensure screenreaders understand the information contained.</p>
+                  </div>
+                  <div class="col-sm-8">
+                    <h2>Callout styles</h2>
+
+                    <div class="callout">
+                      <h3>Callout unstyled</h3>
+                      <p><code>div.callout</code></p>
+                      <p>This callout does not require an Aria tag but should be labeled with a clear heading.</p>
+                      <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p>
+                      <a class="callout__link"><code>a.callout__link</code></a>
+                    </div>
+
+                    <div class="callout--confirmation">
+                      <h3>Callout confirmation</h3>
+                      <p><code>div.callout--confirmation</code></p>
+                      <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
+                      <a class="callout__link"><code>a.callout__link</code></a>
+                    </div>
+
+                    <div class="callout--warning">
+                      <h3>Callout warning</h3>
+                      <p><code>div.callout--warning</code></p>
+                      <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
+                      <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p>
+                      <a class="callout__link"><code>a.callout__link</code></a>
+                    </div>
+
+                    <div class="callout--alert">
+                      <h3>Callout alert</h3>
+                      <p><code>div.callout--alert</code></p>
+                      <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
+                      <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
+                      <a class="callout__link"><code>a.callout__link</code></a>
+                    </div>
+
+                    <div class="callout--quote">
+                      <h3>Callout quote</h3>
+                      <p><code>div.callout--quote</code></p>
+                      <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p>
+                    </div>
+
+                    <h2>Callouts combined</h2>
+                    <p>These callouts can be combined both consecutively or combined, someexamples are shown below.</p>
+
+                    <div class="callout--info">
+                      <h3>Callout info</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                      <div class="callout--quote">
+                        <h3>This is a quote</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                      </div>
+                      <div class="callout--alert">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                      </div>
+                    </div>
+
+
+                    <div class="callout--quote">
+                      <h3>This is a quote</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                      <div class="callout--warning">
+                        <h3>Callout warning</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                      </div>
+                    </div>
+
+
+                    <h2>Brand callout styles</h2>
+                    <p>Below are examples of callout styles utilising the brand colour palette.</p>
+                    <p>These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.</p>
+
+                    <div class="callout--heritage">
+                      <h3>Callout heritage</h3>
+                      <p><code>div.callout--heritage</code></p>
+                    </div>
+
+                    <div class="callout--responsible">
+                      <h3>Callout responsible</h3>
+                      <p><code>div.callout--responsible</code></p>
+                    </div>
+
+                    <div class="callout--inventive">
+                      <h3>Callout inventive</h3>
+                      <p><code>div.callout--inventive</code></p>
+                    </div>
+
+                    <div class="callout--generous">
+                      <h3>Callout generous</h3>
+                      <p><code>div.callout--generous</code></p>
+                    </div>
+
+                  </div>
+                </div><!-- END MAIN CONTENT -->
+            <!--/main -->
+
+        </div>
+  </div>
+    <footer class="main-footer" data-track-zone="footer" id="footer">
+        <div class="main-footer__content flex-row js-equal-height">
+    
+            <div class="main-footer__box main-footer__box--copyright">
+                <div>
+                    <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100"> Copyright © 2015 Citizens Advice. All rights reserved.<br>
+                    Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>
+                    VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>
+                    Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
+                </div>
+            </div>
+
+        </div>
+    </footer>
+</body>
+</html>
+
+
   <meta name="description" content="Citizens Advice style guide">
   <meta name="author" content="Eliot Hill">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,800italic,700,600,800,400,300' rel='stylesheet' type='text/css'>
 
   <!-- ICONS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,125 +246,3 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="assets/images/favicon/32.png" />
 
-</head>
-<body>
-
-  <!-- Content
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="flex-row--header__heritage-blue">
-    <div class="flex-container">
-        <a href="index.html" class="img-link"><img src="assets/images/citizensadvice-white-sm.png" alt="Citizens Advice logo"></a>
-    </div>
-  </div>
-
-  <div class="flex-container">
-    <div class="flex-col-2-3">
-      <h1>Callouts</h1>
-      <p>Used as part of content formats to highlight information. This can be a few words, paragraph or paragraphs with multiple links.</p>
-      <p>It is important to ask:
-        <ul>
-          <li>is the callout neccessary, too many, misused or unneccessary callouts weaken their value</li>
-          <li>which style of callout is relevant, is the information 'useful', 'important' or 'recommending'</li>
-        </ul>
-      </p>
-      <p>Colours can't be relied upon as the only method of communicating the importance and content of a callout. Any callouts should be clearly titled using <code>h2</code>or<code>h3</code> tags. Use the appropriate Aria tags for the relevant callouts to ensure screenreaders understand the information contained.</p>
-
-    </div>
-    <div class="flex-col-2-3">
-      <h2>Callout styles</h2>
-
-      <div class="callout">
-        <h3>Callout unstyled</h3>
-        <p><code>div.callout</code></p>
-        <p>This callout does not require an Aria tag but should be labeled with a clear heading.</p>
-        <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p>
-        <a class="callout__link"><code>a.callout__link</code></a>
-      </div>
-
-      <div class="callout--confirmation">
-        <h3>Callout confirmation</h3>
-        <p><code>div.callout--confirmation</code></p>
-        <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
-        <a class="callout__link"><code>a.callout__link</code></a>
-      </div>
-
-      <div class="callout--warning">
-        <h3>Callout warning</h3>
-        <p><code>div.callout--warning</code></p>
-        <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
-        <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p>
-        <a class="callout__link"><code>a.callout__link</code></a>
-      </div>
-
-      <div class="callout--alert">
-        <h3>Callout alert</h3>
-        <p><code>div.callout--alert</code></p>
-        <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
-        <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
-        <a class="callout__link"><code>a.callout__link</code></a>
-      </div>
-
-      <div class="callout--quote">
-        <h3>Callout quote</h3>
-        <p><code>div.callout--quote</code></p>
-        <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p>
-      </div>
-
-      <h2>Callouts combined</h2>
-      <p>These callouts can be combined both consecutively or combined, someexamples are shown below.</p>
-
-      <div class="callout--info">
-        <h3>Callout info</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        <div class="callout--quote">
-          <h3>This is a quote</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        </div>
-        <div class="callout--alert">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        </div>
-      </div>
-
-
-      <div class="callout--quote">
-        <h3>This is a quote</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        <div class="callout--warning">
-          <h3>Callout warning</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        </div>
-      </div>
-
-
-      <h2>Brand callout styles</h2>
-      <p>Below are examples of callout styles utilising the brand colour palette.</p>
-      <p>These should not be used as part of the advice content. They can be used after the advice content to help the client on their journey to the next step or to ask for support on a campaign related to the advice.</p>
-
-      <div class="callout--heritage">
-        <h3>Callout heritage</h3>
-        <p><code>div.callout--heritage</code></p>
-      </div>
-
-      <div class="callout--responsible">
-        <h3>Callout responsible</h3>
-        <p><code>div.callout--responsible</code></p>
-      </div>
-
-      <div class="callout--inventive">
-        <h3>Callout inventive</h3>
-        <p><code>div.callout--inventive</code></p>
-      </div>
-
-      <div class="callout--generous">
-        <h3>Callout generous</h3>
-        <p><code>div.callout--generous</code></p>
-      </div>
-
-    </div>
-  </div>
-
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
-</html>
