--- a/public/forms.html
+++ b/public/forms.html
@@ -1,21 +1,213 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<!-- saved from url=(0106)https://www.citizensadvice.org.uk/benefits/universal-credit/before-you-apply/universal-credit-eligibility/ -->
 
-  <!-- Basic Page Needs
+<html class="js hide-cookie-monster" lang="en-GB">
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+
+    <title>Citizens Advice style guide</title>
+
+  <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Citizens Advice style guide</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
+    <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
+    <meta content="EWS" name="cab-extent">
+    <meta content="/static/images/apple-touch-icon.png">
+    <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
+
+  <!-- Stylesheet
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/main.css" media="screen" rel="stylesheet">
+    <link href="css/site.css" media="screen" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
+    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
+    <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Javascript
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="../libs/javascript/vendor/jquery-1.11.3.min.js"></script>
+    <script src="../libs/javascript/beta-dap-accordion.js"></script>
+    <script src="../libs/javascript/sticky-nav.js"></script><!-- Sticky Navigation JS -->
+    <script src="../libs/javascript/nav-active.js"></script><!-- Navigation Updating JS -->
+    <script src="../libs/javascript/collapse.js"></script><!-- Accordion JS -->
+    <script src="../libs/javascript/vendor/jquery.sticky.js"></script>
+</head>
+
+<body>
+
+    <div class="skip-nav">
+        <a class="screenreader screenreader--focusable" href="">Skip to content</a> <a class="screenreader screenreader--focusable" href="">Skip to footer</a>
+    </div>
+
+    <div class="cookie-monster hide-no-cookies hide-no-js no-print">
+        <div class="cookie-monster__content">
+            <div>
+                <p>This site uses cookies.&nbsp; Find out more about <a href="#">our use of cookies</a>.</p>
+            </div><button class="button--blue cookie-monster__close" data-action="close" type="button"><i class="icon-cross"></i> Close</button>
+        </div>
+    </div>
+
+    <header class="main-header">
+        <div class="main-header__content main-content">
+            <a class="main-header__logo" href="" title="Citizens Advice home"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;" src="assets/images/ca-logo_100px.svg"></a>
+
+            <!--div class="main-header__links" data-track-zone="top-bar">
+                <a class="main-header__menu-link js-toggle-menu" href=""><i class="icon-menu"></i>Menu</a>
+
+                <nav class="main-header__top-nav">
+                    <a href="#">Cymraeg</a> <a class="hide-offline main-header__login" href=""><i class="icon-key"></i>Sign-in</a>
+                </nav>
+
+                <form action="" class="main-header__search hide-offline">
+                    <label class="screenreader" for="main-header__search__input">Search</label> <input class="main-header__search__input" id="main-header__search__input" name="q" placeholder="" type="search"> <button class="main-header__search__submit" title="Search" type="submit"><i class="icon-search icon--no-text"></i> <span class="screenreader">Search</span></button>
+                </form>
+            </div -->
+
+        </div>
+    </header><!-- MEGA MENU -->
+
+    <div class="main-container">
+        <nav class="main-breadcrumb">
+            <div class="main-breadcrumb__content">
+                <span class="breadcrumb__item"><a href="#">Home</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a href="index.html">Digital guide</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i><a>Forms</a></span>
+            </div>
+        </nav>
+
+        <aside class="section-notice">
+            <h2 class="screenreader">Notice</h2>
+
+            <div class="section-notice__content">
+                <p><span class="badge">NEW</span>&nbsp;This page is part of <a href="#">our new approach to digital advice</a>.</p>
+            </div>
+        </aside>
+
+        <div class="main-content">
+            <!--main class="main-content__right" id="main" role="main">
+                <!-- MAIN CONTENT -->
+
+            <div class="title">
+                <h1 class="title__heading js-ref"><span class="title__title">Forms</span></h1>
+            </div>
+
+            <div class="articleContent">
+
+              <div class="col-sm-8">
+                <form>
+                  <fieldset>
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" id="exampleInputEmail1" placeholder="Enter email" required>
+                    <small>We'll never share your email with anyone else.</small>
+                    <div class="invalid">Please enter a valid email</div>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" id="exampleInputPassword1" placeholder="Password" pattern=".{3,10}" required>
+                    <div class="valid">Wonderful!</div>
+                    <div class="invalid">Please enter a password between 3 and 10 characters</div>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleInputPassword1">Don't fill this out</label>
+                    <input type="password" id="exampleInputPassword1" placeholder="Disabled field" disabled>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleSelect1">Example select</label>
+                    <div class="dropdown">
+                      <select id="exampleSelect1">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleSelect2">Example multiple select</label>
+                    <select multiple id="exampleSelect2" class="multi-select">
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                    </select>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleTextarea">Example textarea</label>
+                    <textarea id="exampleTextarea" rows="3"></textarea>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleInputFile">File input</label>
+                    <input type="file" class="form-control-file" id="exampleInputFile">
+                    <small>This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleInputFile">Radio buttons</label>
+                    <label class="radio">
+                      <input type="radio" name="radio" value="option1" checked>
+                      Yes
+                    </label>
+                    <label class="radio">
+                      <input type="radio" name="radio" value="option2">
+                      No
+                    </label>
+                    <label class="radio disabled">
+                      <input type="radio" name="radio" value="option3" disabled>
+                      Not sure
+                    </label>
+                  </fieldset>
+                  <fieldset>
+                    <label for="exampleInputFile">Checkboxes</label>
+                    <label class="checkbox">
+                      <input type="checkbox" name="checkbox"> Option one
+                    </label>
+                    <label class="checkbox">
+                      <input type="checkbox" name="checkbox"> Option two
+                    </label>
+                    <label class="checkbox disabled">
+                      <input type="checkbox" name="checkbox" disabled> Disabled
+                    </label>
+                  </fieldset>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+              </div>
+
+      
+            </div><!-- END MAIN CONTENT -->
+            <!--/main -->
+
+        </div>
+  </div>
+    <footer class="main-footer" data-track-zone="footer" id="footer">
+        <div class="main-footer__content flex-row js-equal-height">
+    
+            <div class="main-footer__box main-footer__box--copyright">
+                <div>
+                    <p><img alt="" height="100" src="assets/images/ca-logo_100px.svg.png" width="100"> Copyright © 2015 Citizens Advice. All rights reserved.<br>
+                    Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>
+                    VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>
+                    Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
+                </div>
+            </div>
+
+        </div>
+    </footer>
+</body>
+</html>
+
+
   <meta name="description" content="Citizens Advice style guide">
   <meta name="author" content="Eliot Hill">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,800italic,700,600,800,400,300' rel='stylesheet' type='text/css'>
 
   <!-- ICONS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -28,110 +220,8 @@
   <!-- JAVASCRIPT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="js/collapse-min.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="assets/images/favicon/32.png" />
 
-</head>
-<body>
-
-  <!-- Content
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="flex-row--header__heritage-blue">
-    <div class="flex-container">
-        <a href="index.html" class="img-link"><img src="assets/images/citizensadvice-white-sm.png" alt="Citizens Advice logo"></a>
-    </div>
-  </div>
-
-  <div class="flex-container">
-    <div class="flex-col-2-3">
-      <h1>Form styles</h1>
-
-      <form>
-        <fieldset>
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" id="exampleInputEmail1" placeholder="Enter email" required>
-          <small>We'll never share your email with anyone else.</small>
-          <div class="invalid">Please enter a valid email</div>
-        </fieldset>
-        <fieldset>
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" id="exampleInputPassword1" placeholder="Password" pattern=".{3,10}" required>
-          <div class="valid">Wonderful!</div>
-          <div class="invalid">Please enter a password between 3 and 10 characters</div>
-        </fieldset>
-        <fieldset>
-          <label for="exampleInputPassword1">Don't fill this out</label>
-          <input type="password" id="exampleInputPassword1" placeholder="Disabled field" disabled>
-        </fieldset>
-        <fieldset>
-          <label for="exampleSelect1">Example select</label>
-          <div class="dropdown">
-            <select id="exampleSelect1">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-          </div>
-        </fieldset>
-        <fieldset>
-          <label for="exampleSelect2">Example multiple select</label>
-          <select multiple id="exampleSelect2" class="multi-select">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-        </fieldset>
-        <fieldset>
-          <label for="exampleTextarea">Example textarea</label>
-          <textarea id="exampleTextarea" rows="3"></textarea>
-        </fieldset>
-        <fieldset>
-          <label for="exampleInputFile">File input</label>
-          <input type="file" class="form-control-file" id="exampleInputFile">
-          <small>This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
-        </fieldset>
-        <fieldset>
-          <label for="exampleInputFile">Radio buttons</label>
-          <label class="radio">
-            <input type="radio" name="radio" value="option1" checked>
-            Yes
-          </label>
-          <label class="radio">
-            <input type="radio" name="radio" value="option2">
-            No
-          </label>
-          <label class="radio disabled">
-            <input type="radio" name="radio" value="option3" disabled>
-            Not sure
-          </label>
-        </fieldset>
-        <fieldset>
-          <label for="exampleInputFile">Checkboxes</label>
-          <label class="checkbox">
-            <input type="checkbox" name="checkbox"> Option one
-          </label>
-          <label class="checkbox">
-            <input type="checkbox" name="checkbox"> Option two
-          </label>
-          <label class="checkbox disabled">
-            <input type="checkbox" name="checkbox" disabled> Disabled
-          </label>
-        </fieldset>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-
-    </div>
-  </div>
-
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
-</html>
