--- a/public/typography.html
+++ b/public/typography.html
@@ -93,75 +93,14 @@
                 <!-- MAIN CONTENT -->
 
             <div class="title">
-                <h1 class="title__heading js-ref"><span class="title__title">Layout</span></h1>
+                <h1 class="title__heading js-ref"><span class="title__title">Typography</span></h1>
             </div>
 
             <div class="articleContent">
 
-              <!-- Content > Layout -->
+           <!-- Content > Typography -->
               <div class="flex-container">
                 <div class="flex-col-2-3">
-                  <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
-
-                  The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
-                </div>
-              </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>Two Thirds (content first)</h3>
-                  </div>
-                  <div class="flex-col-2-3"><div class="example-box">2/3<code>flex-col-2-3</code></div></div>
-                  <div class="flex-col-1-3"><div class="example-box">1/3<code>flex-col-1-3</code></div></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>Two Thirds (navigation first)</h3>
-                  </div>
-                  <div class="flex-col-1-3"><div class="example-box">1/3<code>flex-col-1-3</code></div></div>
-                  <div class="flex-col-2-3"><div class="example-box">2/3<code>flex-col-2-3</code></div></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>One Quarter</h3>
-                  </div>
-                  <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
-                  <div class="flex-col-3-4"><div class="example-box">3/4<code>flex-col-3-4</code></div></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>Full Width</h3>
-                  </div>
-                  <div class="flex-col-1-1"><div class="example-box">1/1<code>flex-col-1-1</code></div></div>
-                </div>    
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>Thirds</h3>
-                  </div>
-                  <div class="flex-col-1-3"><div class="example-box">1/3<code>flex-col-1-3</code></div></div>
-                  <div class="flex-col-1-3"><div class="example-box">1/3<code>flex-col-1-3</code></div></div>
-                  <div class="flex-col-1-3"><div class="example-box">1/3<code>flex-col-1-3</code></div></div>
-                </div>
-
-                <div class="flex-container">
-                  <div class="flex-col-1-1">
-                    <h3>Quarters</h3>
-                  </div>
-                  <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
-                  <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
-                  <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
-                  <div class="flex-col-1-4"><div class="example-box">1/4<code>flex-col-1-4</code></div></div>
-                </div>
-
-
-              <!-- Content > Typography -->
-              <div class="flex-container">
-                <div class="flex-col-2-3">
-                  <h2>Typography</h2>
                   <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using:</p>
                   <p style="font-weight: 400;">Open Sans 400</p>
                   <p style="font-weight: 600;">Open Sans 600</p>
