--- a/public/typography.html
+++ b/public/typography.html
@@ -101,11 +101,13 @@
            <!-- Content > Typography -->
               <div class="flex-container">
                 <div class="flex-col-2-3">
-                  <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using:</p>
-                  <p style="font-weight: 400;">Open Sans 400</p>
-                  <p style="font-weight: 600;">Open Sans 600</p>
-                  <p style="font-weight: 700;">Open Sans 700</p>
-                  <p style="font-weight: 800;">Open Sans 800</p>
+                  <p>The font used is <a href="http://www.google.com/fonts/specimen/Open+Sans">Open Sans</a> a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.</p>
+                  <p>When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.</p>
+
+                  <p style="font-weight: 400;">Open Sans 400 <span class="code">@font-weight-base</span></p>
+                  <p style="font-weight: 600;">Open Sans 600 <span class="code">@font-weight-bold</span></p>
+                  <p style="font-weight: 700;">Open Sans 700 <span class="code">@font-weight-bolder</span></p>
+                  <p style="font-weight: 800;">Open Sans 800 <span class="code">@font-weight-boldest</span></p>
 
                   <p>Typographic styles for content specific pages. See <a href="#">content guidelines</a> for how to write content.</p>
                   <h1>h1 for page titles</h1>
